updated portfolio links

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Portfolio | Claudia Falk</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -50,25 +52,25 @@
             <div class="card">
                 <img src="images/technics-q-c-640-480-1.jpg" class="card-img-top" alt="Word Guess">
                 <div class="card-body">
-            <h5 class="card-title">Word Guess</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Harry Potter Word Guess</h5>
+            <p class="card-text">Guess which Harry Potter character</p>
+            <a href = "https://claudiafalk0.github.io/Word_Guess_Game/">https://claudiafalk0.github.io/Word_Guess_Game/</a>
           </div>
         </div>
         <div class="card">
                 <img src="images/technics-q-c-640-480-2.jpg" class="card-img-top" alt="RPG Game">
                 <div class="card-body">
-            <h5 class="card-title">RPG Game</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Fruit Collector</h5>
+            <p class="card-text">Four fruit images have a random number attached to them. Try to reach the Goal without going over.</p>
+            <a href = "https://claudiafalk0.github.io/unit-4-game/">https://claudiafalk0.github.io/unit-4-game/</a>
           </div>
         </div>
         <div class="card">
                 <img src="images/technics-q-c-640-480-5.jpg" class="card-img-top" alt="Trivia Game">
                 <div class="card-body">
-            <h5 class="card-title">Trivia Game</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Mythic Creatures Trivia Game</h5>
+            <p class="card-text">Correctly guess which magical creature the image represents</p>
+            <a href = "https://claudiafalk0.github.io/TriviaGame/">https://claudiafalk0.github.io/TriviaGame/</a>
           </div>
         </div>
       </div>
@@ -84,9 +86,9 @@
             <div class="card">
                     <img src="images/technics-q-c-640-480-9.jpg" class="card-img-top" alt="Rock Paper Scissors">
                     <div class="card-body">
-                <h5 class="card-title">Rock Paper Scissors</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Emotions Giphy</h5>
+                <p class="card-text">Find a gif for every emotion!</p>
+                <a href = "https://claudiafalk0.github.io/giphySite/">https://claudiafalk0.github.io/giphySite/</a>
               </div>
             </div>
 
