addded train schedule

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="card">
-                <img src="images/technics-q-c-640-480-2.jpg" class="card-img-top" alt="RPG Game">
+                <img src="images/technics-q-c-640-480-2.jpg" class="card-img-top" alt="Fruit Collector">
                 <div class="card-body">
             <h5 class="card-title">Fruit Collector</h5>
             <p class="card-text">Four fruit images have a random number attached to them. Try to reach the Goal without going over.</p>
@@ -74,28 +74,37 @@
           </div>
         </div>
       </div>
-      <div class="card-deck">
-            <div class="card">
-                    <img src="images/technics-q-c-640-480-7.jpg" class="card-img-top" alt="Rutgers Info Widget">
-                    <div class="card-body">
-                <h5 class="card-title">Rutgers Info Widget</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-                    <img src="images/technics-q-c-640-480-9.jpg" class="card-img-top" alt="Rock Paper Scissors">
-                    <div class="card-body">
-                <h5 class="card-title">Emotions Giphy</h5>
-                <p class="card-text">Find a gif for every emotion!</p>
-                <a href = "https://claudiafalk0.github.io/giphySite/">https://claudiafalk0.github.io/giphySite/</a>
-              </div>
-            </div>
+    <div id = "main-container" class = "container">
 
-<footer>
-    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/technics-q-c-640-480-7.jpg" class="card-img-top" alt="Rutgers Info Widget">
+          <div class="card-body">
+            <h5 class="card-title">Rutgers Info Widget</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/technics-q-c-640-480-9.jpg" class="card-img-top" alt="Emotions Giphy">
+          <div class="card-body">
+            <h5 class="card-title">Emotions Giphy</h5>
+            <p class="card-text">Find a gif for every emotion!</p>
+            <a href = "https://claudiafalk0.github.io/giphySite/">https://claudiafalk0.github.io/giphySite/</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/technics-q-c-640-480-9.jpg" class="card-img-top" alt="Train Scheduler">
+          <div class="card-body">
+            <h5 class="card-title">Train Schedule</h5>
+            <p class="card-text">Give the train its name, destination, start time and frequency to produce the next train arrival and minutes away</p>
+            <a href = "https://claudiafalk0.github.io/trainSchedule/">https://claudiafalk0.github.io/trainSchedule/</a>
+          </div>
+        </div>
+      </div>
+        
+        <footer>
       Copyright &copy;
-    </div>
   </footer>
 </body>
 
