--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       <h1>Portfolio</h1>
         <div class="card-deck">
             <div class="card">
-                <img src="images/technics-q-c-640-480-1.jpg" class="card-img-top" alt="Word Guess">
+                <img src="images/harry_potter.jpg" class="card-img-top" alt="Word Guess">
                 <div class="card-body">
             <h5 class="card-title">Harry Potter Word Guess</h5>
             <p class="card-text">Guess which Harry Potter character</p>
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="card">
-                <img src="images/technics-q-c-640-480-2.jpg" class="card-img-top" alt="Fruit Collector">
+                <img src="images/fruit_Collector.jpg" class="card-img-top" alt="Fruit Collector">
                 <div class="card-body">
             <h5 class="card-title">Fruit Collector</h5>
             <p class="card-text">Four fruit images have a random number attached to them. Try to reach the Goal without going over.</p>
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="card">
-                <img src="images/technics-q-c-640-480-5.jpg" class="card-img-top" alt="Trivia Game">
+                <img src="images/mythic_creatures.jpg" class="card-img-top" alt="Trivia Game">
                 <div class="card-body">
             <h5 class="card-title">Mythic Creatures Trivia Game</h5>
             <p class="card-text">Correctly guess which magical creature the image represents</p>
@@ -78,7 +78,7 @@
 
       <div class="card-deck">
         <div class="card" id ="card-4">
-          <img src="images/technics-q-c-640-480-7.jpg" class="card-img-top" alt="Rutgers Info Widget">
+          <img src="images/widget.jpg" class="card-img-top" alt="Rutgers Info Widget">
           <div id = "card-body-4" class="card-body">
             <h5 class="card-title">Rutgers Info Widget</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="card" id = "card-5">
-          <img src="images/technics-q-c-640-480-9.jpg" class="card-img-top" alt="Emotions Giphy">
+          <img src="images/emojis.jpg" class="card-img-top" alt="Emotions Giphy">
           <div id = "card-body-5" class="card-body">
             <h5 class="card-title">Emotions Giphy</h5>
             <p class="card-text">Find a gif for every emotion!</p>
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="card" id = "card-6">
-          <img src="images/technics-q-c-640-480-9.jpg" class="card-img-top" alt="Train Scheduler">
+          <img src="images/train.jpg" class="card-img-top" alt="Train Scheduler">
           <div id = "card-body-6" class="card-body">
             <h5 class="card-title">Train Schedule</h5>
             <p class="card-text">Give the train its name, destination, start time and frequency to produce the next train arrival and minutes away</p>
