--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
 
  
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-light" style="background-color: cadetblue;">
         <a class="navbar-brand" href="#">Claudia Falk</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,28 +38,27 @@
       </nav>
 
   <div id="main-container" class="container">
-    <section class="main-section">
+    <section id = "contact" class="main-section">
       <h1>Contact</h1>
 
-      <form>
-        <p>Name</p>  
-        <input class="form-control" type="text" placeholder="Default input">
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-         <div class="form-group">
-          <label for="exampleFormControlTextarea1">Comments</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-      </form>
+    
+<address>
+  <h5>Email address</h5>
+  <a href = "mailto:claudiafalk0@gmail.com" style = 'color:#ffcc00; text-shadow: 2px 1px black'>claudiafalk0@gmail.com</a>
+  <h5>Phone Number</h5>
+  <p>(832) 982-9442</p>
+  
+  <h5>LinkedIn Profile</h5>
+  <a href = "https://www.linkedin.com/in/claudia-falk-a0617792/" target = _blank style = 'color:#ffcc00; text-shadow: 2px 1px black'>https://www.linkedin.com/in/claudia-falk-a0617792/</a>
+</address>
+      
 
     </section>
 
   </div>
 
   <footer>
-    <div class="container">
+    <div>
       Copyright &copy; 
     </div>
   </footer>
