--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>About | Claudia Falk</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -20,7 +21,7 @@ img{
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-light" style="background-color: cadetblue;">
         <a class="navbar-brand" href="#">Claudia Falk</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,24 +44,29 @@ img{
       </nav>
    
 
-  <div id="main-container" class="container">
+  <div id="main-container" class="container" >
     <section class="main-section">
-      <h1>About Me</h1>
+      <div id = "background">
 
-      <img src="images/profile_img.jpg" class="auth-image w-25 img-thumbnail rounded float-left" alt="Claudia Falk">
-
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. </p>
-      <p> Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur. </p>
-      <p> Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-      <p> Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-        
+        <h1>About Me</h1>
+        <div id = "absolute">
+          <img src="images/profile_img.jpg" class="auth-image w-25 img-thumbnail rounded float-left" alt="Claudia Falk">
+        </div>
+        <div id = "relative">
+          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. </p>
+          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur. </p>
+          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        </div>
+          
+      </div>
 
     </section>
 
   </div>
 
   <footer>
-    <div class="container">
+    <div>
       Copyright &copy; 
     </div>
   </footer>
