--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 <body>
 
   
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-light" style="background-color: cadetblue;">
         <a class="navbar-brand" href="#">Claudia Falk</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,58 +53,66 @@
                 <img src="images/harry_potter.jpg" class="card-img-top" alt="Word Guess">
                 <div class="card-body">
             <h5 class="card-title">Harry Potter Word Guess</h5>
-            <p class="card-text">Guess which Harry Potter character</p>
-            <a href = "https://claudiafalk0.github.io/Word_Guess_Game/">https://claudiafalk0.github.io/Word_Guess_Game/</a>
+            <p class="card-text">Guess which Harry Potter character. This game uses tools from javascript in order to make a functioning,interactive word guess game</p>
+            <a href = "https://claudiafalk0.github.io/Word_Guess_Game/" target = _blank>https://claudiafalk0.github.io/Word_Guess_Game/</a>
           </div>
         </div>
         <div class="card">
                 <img src="images/fruit_Collector.jpg" class="card-img-top" alt="Fruit Collector">
                 <div class="card-body">
             <h5 class="card-title">Fruit Collector</h5>
-            <p class="card-text">Four fruit images have a random number attached to them. Try to reach the Goal without going over.</p>
-            <a href = "https://claudiafalk0.github.io/unit-4-game/">https://claudiafalk0.github.io/unit-4-game/</a>
+            <p class="card-text">Four fruit images have a random number attached to them. Try to reach the Goal without going over. This game uses javascript functions such as math.random in order to randomly assign numbers to each variable, as well as the event function and other javascript </p>
+            <a href = "https://claudiafalk0.github.io/unit-4-game/" target = _blank>https://claudiafalk0.github.io/unit-4-game/</a>
           </div>
         </div>
         <div class="card">
                 <img src="images/mythic_creatures.jpg" class="card-img-top" alt="Trivia Game">
                 <div class="card-body">
             <h5 class="card-title">Mythic Creatures Trivia Game</h5>
-            <p class="card-text">Correctly guess which magical creature the image represents</p>
-            <a href = "https://claudiafalk0.github.io/TriviaGame/">https://claudiafalk0.github.io/TriviaGame/</a>
+            <p class="card-text">Correctly guess which magical creature the image represents. This game uses a combination of jquery and javascript in order to append the images to the page, and have the images change after the user chooses an answer or time runs out. The game also uses math.random function to randomly assign the correct variable to a different postion in each question</p>
+            <a href = "https://claudiafalk0.github.io/TriviaGame/" target = _blank>https://claudiafalk0.github.io/TriviaGame/</a>
           </div>
         </div>
       </div>
-    <div id = "main-container" class = "container">
+      </section>
+    </div>
+    <div id = "main-container" class = "container" class = "row2">
 
-      <div class="card-deck">
-        <div class="card" id ="card-4">
-          <img src="images/widget.jpg" class="card-img-top" alt="Rutgers Info Widget">
-          <div id = "card-body-4" class="card-body">
-            <h5 class="card-title">Rutgers Info Widget</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <section class="main-section">
+        <div class="card-deck">
+          <div class="card" id ="card-4">
+            <img src="images/widget.jpg" class="card-img-top" alt="Rutgers Info Widget">
+            <div id = "card-body-4" class="card-body">
+              <h5 class="card-title">Rutgers Info Widget</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card" id = "card-5">
+            <img src="images/emojis.jpg" class="card-img-top" alt="Emotions Giphy">
+            <div id = "card-body-5" class="card-body">
+              <h5 class="card-title">Emotions Giphy</h5>
+              <p class="card-text">Find a gif for every emotion! This uses the giphy api in order to pull giphy images either after one of the prebuilt buttons is clicked or when the users adds one of their own customized buttons</p>
+              <a href = "https://claudiafalk0.github.io/giphySite/" target = _blank>https://claudiafalk0.github.io/giphySite/</a>
+            </div>
+          </div>
+          <div class="card" id = "card-6">
+            <img src="images/train.jpg" class="card-img-top" alt="Train Scheduler">
+            <div id = "card-body-6" class="card-body">
+              <h5 class="card-title">Train Schedule</h5>
+              <p class="card-text">Give the train its name, destination, start time and frequency to produce the next train arrival and minutes away. This project uses firebase in order to store the users input variables, and from the user inputs it uses moment.js in order to calculate the next arrival and minutes away times</p>
+              <a href = "https://claudiafalk0.github.io/trainSchedule/" target = _blank>https://claudiafalk0.github.io/trainSchedule/</a>
+            </div>
           </div>
         </div>
-        <div class="card" id = "card-5">
-          <img src="images/emojis.jpg" class="card-img-top" alt="Emotions Giphy">
-          <div id = "card-body-5" class="card-body">
-            <h5 class="card-title">Emotions Giphy</h5>
-            <p class="card-text">Find a gif for every emotion!</p>
-            <a href = "https://claudiafalk0.github.io/giphySite/">https://claudiafalk0.github.io/giphySite/</a>
-          </div>
-        </div>
-        <div class="card" id = "card-6">
-          <img src="images/train.jpg" class="card-img-top" alt="Train Scheduler">
-          <div id = "card-body-6" class="card-body">
-            <h5 class="card-title">Train Schedule</h5>
-            <p class="card-text">Give the train its name, destination, start time and frequency to produce the next train arrival and minutes away</p>
-            <a href = "https://claudiafalk0.github.io/trainSchedule/">https://claudiafalk0.github.io/trainSchedule/</a>
-          </div>
-        </div>
-      </div>
+      </section>
+    </div>
+    
         
         <footer>
-      Copyright &copy;
+          <div>
+            Copyright &copy;
+          </div>
   </footer>
 </body>
 
