--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,11 @@
       <section class="main-section">
         <div class="card-deck">
           <div class="card" id ="card-4">
-            <img src="images/widget.jpg" class="card-img-top" alt="Rutgers Info Widget">
+            <img src="images/bandSpot.jpg" class="card-img-top" alt="BandSpot">
             <div id = "card-body-4" class="card-body">
-              <h5 class="card-title">Rutgers Info Widget</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <h5 class="card-title">AlbumSpot</h5>
+              <p class="card-text">Find albums from your favorite artists and listen to song snippets from that album. Also shows events for that artist in users area, and links to the ticketmaster site for users to purchase tickets. My contributions for this project were the ticketmaster api integration with the ip address api in order for events in the users state to automatically populate with the artist name</p>
+              <a href = "https://christianhpak.github.io/BandSpot/" target = _blank>https://christianhpak.github.io/BandSpot/</a>
             </div>
           </div>
           <div class="card" id = "card-5">
