updated about me text

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ img{
           <img src="images/profile_img.jpg" class="auth-image w-25 img-thumbnail rounded float-left" alt="Claudia Falk">
         </div>
         <div id = "relative">
-          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. </p>
-          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur. </p>
-          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Full stack developer with a background in fine arts. Educated at the University of Denver Continuing Ed with skills in HTML, CSS, and Javascript. </p>
+          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Quick learner passionate about collaborating with others to find different solutions to programming challenges and creating responsive websites.</p>
+          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Successfully communicated between departmental groups in order to coordinate client web designs. </p>
+          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'>Strengths in teamwork, communication, problem solving, and maintaining composure in difficult situations. </p>
         </div>
           
       </div>
