--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,17 @@
         </div>
       </section>
     </div>
-
+    <div class="card" id = "card-6">
+      <img src="images/train.jpg" class="card-img-top" alt="bamazon">
+      <div id = "card-body-6" class="card-body">
+        <h5 class="card-title">Bamazon node.js and MYSQL</h5>
+        <p class="card-text">Using MYSQL, created a database that, when in use is able to display data in a table and update the data based on the amount of inventory the user selects</p>
+        <a href = "https://github.com/claudiafalk0/bamazon" target = _blank>https://github.com/claudiafalk0/bamazon</a>
+      </div>
+    </div>
+  </div>
+</section>
+</div>
         
         <footer>
           <div>
