--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
   <div id = "card-body-6" class="card-body">
     <h5 class="card-title">Bamazon node.js and MYSQL</h5>
     <p class="card-text">Using heroku, node.js, path, and express, this site allows you to 'Find your new best friend' by answering a set of survey questions and comparing those answers to answers from other users.</p>
-    <a href = "https://git.heroku.com/safe-chamber-82067.git" target = _blank>https://git.heroku.com/safe-chamber-82067.git</a>
+    <a href = "https://safe-chamber-82067.herokuapp.com/" target = _blank>https://safe-chamber-82067.herokuapp.com/</a>
   </div>
 </div>
 </div>
