--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
     <div id = "main-container" class = "container" class = "row3">
 
       <section class="main-section">
-        <div class="card" id = "card-6">
+        <div class="card" id = "card-7">
           <img src="images/train.jpg" class="card-img-top" alt="bamazon">
           <div id = "card-body-6" class="card-body">
             <h5 class="card-title">Bamazon node.js and MYSQL</h5>
@@ -118,17 +118,15 @@
             <a href = "https://github.com/claudiafalk0/bamazon" target = _blank>https://github.com/claudiafalk0/bamazon</a>
           </div>
         </div>
-      </div>
-      <div class="card" id = "card-6">
-        <img src="images/friendFinder.jpg" class="card-img-top" alt="bamazon">
+      <div class="card" id = "card-8">
+        <img src="images/friendFinder.jpg" class="card-img-top" alt="friendFinder">
         <div id = "card-body-6" class="card-body">
           <h5 class="card-title">Friend Finder</h5>
           <p class="card-text">Using heroku, node.js, path, and express, this site allows you to 'Find your new best friend' by answering a set of survey questions and comparing those answers to answers from other users.</p>
           <a href = "https://safe-chamber-82067.herokuapp.com/" target = _blank>https://safe-chamber-82067.herokuapp.com/</a>
         </div>
       </div>
-      </div>
-          <div class="card" id = "card-6">
+          <div class="card" id = "card-9">
             <img src="images/burger.jpg" class="card-img-top" alt="Train Scheduler">
             <div id = "card-body-6" class="card-body">
               <h5 class="card-title">Devour this!</h5>
@@ -136,15 +134,39 @@
               <a href = "https://piscine-saucisson-81709.herokuapp.com/" target = _blank>https://piscine-saucisson-81709.herokuapp.com/</a>
             </div>
           </div>
+      </section>
+    </div>
+    <div id = "main-container" class = "container" class = "row4">
+
+      <section class="main-section">
+        <div class="card-deck">
+          <div class="card" id ="card-10">
+            <img src="images/pupper_photo.jpg" class="card-img-top" alt="dog photo">
+            <div id = "card-body-4" class="card-body">
+              <h5 class="card-title">Pupper</h5>
+              <p class="card-text">Dog parks are overwhelming both for dogs, as well as owners. Using MySQL, Passport, nodemailer, Sequelize, and Bootstrap this app allows you to input the information on your pup using a survey, then using answers you provide filters survey results for other dogs matching your requirements.</p>
+              <a href = "https://project2-pupper.herokuapp.com/signin" target = _blank>https://project2-pupper.herokuapp.com/signin</a>
+            </div>
+          </div>
+          <div class="card" id = "card-11">
+            <img src="images/emojis.jpg" class="card-img-top" alt="Emotions Giphy">
+            <div id = "card-body-5" class="card-body">
+              <h5 class="card-title">Emotions Giphy</h5>
+              <p class="card-text">Find a gif for every emotion! This uses the giphy api in order to pull giphy images either after one of the prebuilt buttons is clicked or when the users adds one of their own customized buttons</p>
+              <a href = "https://claudiafalk0.github.io/giphySite/" target = _blank>https://claudiafalk0.github.io/giphySite/</a>
+            </div>
+          </div>
+          <div class="card" id = "card-12">
+            <img src="images/train.jpg" class="card-img-top" alt="Train Scheduler">
+            <div id = "card-body-6" class="card-body">
+              <h5 class="card-title">Train Schedule</h5>
+              <p class="card-text">Give the train its name, destination, start time and frequency to produce the next train arrival and minutes away. This project uses firebase in order to store the users input variables, and from the user inputs it uses moment.js in order to calculate the next arrival and minutes away times</p>
+              <a href = "https://claudiafalk0.github.io/trainSchedule/" target = _blank>https://claudiafalk0.github.io/trainSchedule/</a>
+            </div>
+          </div>
         </div>
       </section>
     </div>
-    
-</section>
-</div>
-
-</section>
-</div>
         
         <footer>
           <div>
