--- a/portfolio.html
+++ b/portfolio.html
@@ -108,36 +108,36 @@
       </section>
     </div>
     <div id = "main-container" class = "container" class = "row3">
-
       <section class="main-section">
-        <div class="card" id = "card-7">
-          <img src="images/train.jpg" class="card-img-top" alt="bamazon">
-          <div id = "card-body-6" class="card-body">
-            <h5 class="card-title">Bamazon node.js and MYSQL</h5>
-            <p class="card-text">Using MYSQL, created a database that, when in use is able to display data in a table and update the data based on the amount of inventory the user selects</p>
-            <a href = "https://github.com/claudiafalk0/bamazon" target = _blank>https://github.com/claudiafalk0/bamazon</a>
+        <div class="card-deck">
+          <div class="card" id ="card-7">
+            <img src="images/train.jpg" class="card-img-top" alt="bamazon">
+            <div id = "card-body-4" class="card-body">
+              <h5 class="card-title">Bamazon node.js and MYSQL</h5>
+              <p class="card-text">Using MYSQL, created a database that, when in use is able to display data in a table and update the data based on the amount of inventory the user selects</p>
+              <a href = "https://github.com/claudiafalk0/bamazon" target = _blank>https://github.com/claudiafalk0/bamazon</a>
+            </div>
           </div>
-        </div>
-      <div class="card" id = "card-8">
-        <img src="images/friendFinder.jpg" class="card-img-top" alt="friendFinder">
-        <div id = "card-body-6" class="card-body">
-          <h5 class="card-title">Friend Finder</h5>
-          <p class="card-text">Using heroku, node.js, path, and express, this site allows you to 'Find your new best friend' by answering a set of survey questions and comparing those answers to answers from other users.</p>
-          <a href = "https://safe-chamber-82067.herokuapp.com/" target = _blank>https://safe-chamber-82067.herokuapp.com/</a>
-        </div>
-      </div>
+          <div class="card" id = "card-8">
+            <img src="images/friendFinder.jpg" class="card-img-top" alt="friendFinder">
+            <div id = "card-body-5" class="card-body">
+              <h5 class="card-title">Friend Finder</h5>
+              <p class="card-text">Using heroku, node.js, path, and express, this site allows you to 'Find your new best friend' by answering a set of survey questions and comparing those answers to answers from other users.</p>
+              <a href = "https://safe-chamber-82067.herokuapp.com/" target = _blank>https://safe-chamber-82067.herokuapp.com/</a>
+            </div>
+          </div>
           <div class="card" id = "card-9">
-            <img src="images/burger.jpg" class="card-img-top" alt="Train Scheduler">
+            <img src="images/burger.jpg" class="card-img-top" alt="burger">
             <div id = "card-body-6" class="card-body">
               <h5 class="card-title">Devour this!</h5>
               <p class="card-text">Using heroku, handlebars, MYSQL, and express, this site allows you to add, delete, and 'Devour' burgers. When a burger is devoured it is added to the 'eaten' list, but when a burger is deleted it is removed from a list entirely.</p>
               <a href = "https://piscine-saucisson-81709.herokuapp.com/" target = _blank>https://piscine-saucisson-81709.herokuapp.com/</a>
             </div>
           </div>
+        </div>
       </section>
     </div>
     <div id = "main-container" class = "container" class = "row4">
-
       <section class="main-section">
         <div class="card-deck">
           <div class="card" id ="card-10">
