added clicky game

--- a/portfolio.html
+++ b/portfolio.html
@@ -149,11 +149,11 @@
             </div>
           </div>
           <div class="card" id = "card-11">
-            <img src="images/emojis.jpg" class="card-img-top" alt="Emotions Giphy">
+            <img src="images/simpsons.png" class="card-img-top" alt="Simpsons">
             <div id = "card-body-5" class="card-body">
-              <h5 class="card-title">Emotions Giphy</h5>
-              <p class="card-text">Find a gif for every emotion! This uses the giphy api in order to pull giphy images either after one of the prebuilt buttons is clicked or when the users adds one of their own customized buttons</p>
-              <a href = "https://claudiafalk0.github.io/giphySite/" target = _blank>https://claudiafalk0.github.io/giphySite/</a>
+              <h5 class="card-title">The Simpson's clicky game</h5>
+              <p class="card-text">Using React, click on an image of a Simpson's character. The score will increase with each image clicked that has not been previously clicked, and the images will randomize after each click. If you click the same image twice, an alert will pop up and the game will reset.</p>
+              <a href = "https://pacific-brook-74040.herokuapp.com/" target = _blank>https://pacific-brook-74040.herokuapp.com/</a>
             </div>
           </div>
           <div class="card" id = "card-12">
