--- a/portfolio.html
+++ b/portfolio.html
@@ -159,9 +159,9 @@
           <div class="card" id = "card-12">
             <img src="images/train.jpg" class="card-img-top" alt="Train Scheduler">
             <div id = "card-body-6" class="card-body">
-              <h5 class="card-title">Train Schedule</h5>
-              <p class="card-text">Give the train its name, destination, start time and frequency to produce the next train arrival and minutes away. This project uses firebase in order to store the users input variables, and from the user inputs it uses moment.js in order to calculate the next arrival and minutes away times</p>
-              <a href = "https://claudiafalk0.github.io/trainSchedule/" target = _blank>https://claudiafalk0.github.io/trainSchedule/</a>
+              <h5 class="card-title">React Pupper</h5>
+              <p class="card-text">Pupper version 2.0. Uses React, AWS, nodemailer, Passport with Auth0 and OAuth, and all CRUD functionality</p>
+              <a href = "https://guarded-escarpment-41457.herokuapp.com/" target = _blank>https://guarded-escarpment-41457.herokuapp.com/</a>
             </div>
           </div>
         </div>
