--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ img{
 
 <body>
     <nav class="navbar navbar-light" style="background-color: cadetblue;">
-        <a class="navbar-brand" href="#">Claudia Falk</a>
+        <a class="navbar-brand" href="index.html">Claudia Falk</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -53,10 +53,10 @@ img{
           <img src="images/profile_img.jpg" class="auth-image w-25 img-thumbnail rounded float-left" alt="Claudia Falk">
         </div>
         <div id = "relative">
-          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Full stack developer with a background in fine arts. Educated at the University of Denver Continuing Ed with skills in HTML, CSS, and Javascript. </p>
-          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Quick learner passionate about collaborating with others to find different solutions to programming challenges and creating responsive websites.</p>
-          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'> Successfully communicated between departmental groups in order to coordinate client web designs. </p>
-          <p style = 'color: whitesmoke; text-shadow: 2px 1px black'>Strengths in teamwork, communication, problem solving, and maintaining composure in difficult situations. </p>
+          <p style = 'color: black'> Full stack developer with a background in fine arts. Educated at the University of Denver Continuing Ed with skills in HTML, CSS, and Javascript. </p>
+          <p style = 'color: black'> Quick learner passionate about collaborating with others to find different solutions to programming challenges and creating responsive websites.</p>
+          <p style = 'color: black'> Successfully communicated between departmental groups in order to coordinate client web designs. </p>
+          <p style = 'color: black'>Strengths in teamwork, communication, problem solving, and maintaining composure in difficult situations. </p>
         </div>
           
       </div>
