--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
  
     <nav class="navbar navbar-light" style="background-color: cadetblue;">
-        <a class="navbar-brand" href="#">Claudia Falk</a>
+        <a class="navbar-brand" href="index.html">Claudia Falk</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,12 +44,21 @@
     
 <address>
   <h5>Email address</h5>
-  <a href = "mailto:claudiafalk0@gmail.com" style = 'color:#ffcc00; text-shadow: 2px 1px black'>claudiafalk0@gmail.com</a>
+  <a href = "mailto:claudiafalk0@gmail.com" style = 'color:rgba(5, 117, 148, 1)'>claudiafalk0@gmail.com</a>
+</br>
+</br>
   <h5>Phone Number</h5>
   <p>(832) 982-9442</p>
-  
+</br>
   <h5>LinkedIn Profile</h5>
-  <a href = "https://www.linkedin.com/in/claudia-falk-a0617792/" target = _blank style = 'color:#ffcc00; text-shadow: 2px 1px black'>https://www.linkedin.com/in/claudia-falk-a0617792/</a>
+  <a href = "https://www.linkedin.com/in/claudia-falk-a0617792/" target = _blank style = 'color:rgba(5, 117, 148, 1)'>https://www.linkedin.com/in/claudia-falk-a0617792/</a>
+</br>
+</br>
+
+  <h5>Github Profile</h5>
+  <a href = "https://github.com/claudiafalk0" target = _blank style = 'color:rgba(5, 117, 148, 1)'>https://github.com/claudiafalk0</a>
+</br>
+</br>
 </address>
       
 
