--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
   
     <nav class="navbar navbar-light" style="background-color: cadetblue;">
-        <a class="navbar-brand" href="#">Claudia Falk</a>
+        <a class="navbar-brand" href="index.html">Claudia Falk</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
