fixing portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
       <section class="main-section">
         <div class="card-deck">
           <div class="card" id ="card-7">
-            <img src="images/train.jpg" class="card-img-top" alt="bamazon">
+            <img src="images/code.jpg" class="card-img-top" alt="bamazon">
             <div id = "card-body-4" class="card-body">
               <h5 class="card-title">Bamazon node.js and MYSQL</h5>
               <p class="card-text">Using MYSQL, created a database that, when in use is able to display data in a table and update the data based on the amount of inventory the user selects</p>
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="card" id = "card-12">
-            <img src="images/train.jpg" class="card-img-top" alt="Train Scheduler">
+            <img src="images/pupper_photo.jpg" class="card-img-top" alt="Train Scheduler">
             <div id = "card-body-6" class="card-body">
               <h5 class="card-title">React Pupper</h5>
               <p class="card-text">Pupper version 2.0. Uses React, AWS, nodemailer, Passport with Auth0 and OAuth, and all CRUD functionality</p>
