fixing portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="card" id = "card-12">
-            <img src="images/pupper_photo.jpg" class="card-img-top" alt="Train Scheduler">
+            <img src="images/reactPupper.jpg" class="card-img-top" alt="Train Scheduler">
             <div id = "card-body-6" class="card-body">
               <h5 class="card-title">React Pupper</h5>
               <p class="card-text">Pupper version 2.0. Uses React, AWS, nodemailer, Passport with Auth0 and OAuth, and all CRUD functionality</p>
