--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ img{
           <img src="images/profile_img.jpg" class="auth-image w-25 img-thumbnail rounded float-left" alt="Claudia Falk">
         </div>
         <div id = "relative">
-          <p style = 'color: black'> Full stack developer with a background in fine arts. Educated at the University of Denver Continuing Ed with skills in HTML, CSS, and Javascript. </p>
+          <p style = 'color: black'> Full stack developer with a background in fine arts. Educated at the University of Denver Continuing Ed with skills in MERN technologies, as well as AWS S3. </p>
           <p style = 'color: black'> Quick learner passionate about collaborating with others to find different solutions to programming challenges and creating responsive websites.</p>
           <p style = 'color: black'> Successfully communicated between departmental groups in order to coordinate client web designs. </p>
           <p style = 'color: black'>Strengths in teamwork, communication, problem solving, and maintaining composure in difficult situations. </p>
