--- a/contact.html
+++ b/contact.html
@@ -38,38 +38,39 @@
       </nav>
 
   <div id="main-container" class="container">
-    <section id = "contact" class="main-section">
+    <section id = 'contact' class="main-section">
       <h1>Contact</h1>
 
-    
-<address>
-  <h5>Email address</h5>
-  <a href = "mailto:claudiafalk0@gmail.com" style = 'color:rgba(5, 117, 148, 1)'>claudiafalk0@gmail.com</a>
+<div>
+  <address>
+    <h5>Email address</h5>
+    <a href = "mailto:claudiafalk0@gmail.com" style = 'color:rgba(5, 117, 148, 1)'>claudiafalk0@gmail.com</a>
+  </br>
 </br>
+<h5>Phone Number</h5>
+<p>(832) 982-9442</p>
 </br>
-  <h5>Phone Number</h5>
-  <p>(832) 982-9442</p>
-</br>
-  <h5>LinkedIn Profile</h5>
-  <a href = "https://www.linkedin.com/in/claudia-falk-a0617792/" target = _blank style = 'color:rgba(5, 117, 148, 1)'>https://www.linkedin.com/in/claudia-falk-a0617792/</a>
+<h5>LinkedIn Profile</h5>
+<a href = "https://www.linkedin.com/in/claudia-falk-a0617792/" target = _blank style = 'color:rgba(5, 117, 148, 1)'>https://www.linkedin.com/in/claudia-falk-a0617792/</a>
 </br>
 </br>
 
-  <h5>Github Profile</h5>
-  <a href = "https://github.com/claudiafalk0" target = _blank style = 'color:rgba(5, 117, 148, 1)'>https://github.com/claudiafalk0</a>
+<h5>Github Profile</h5>
+<a href = "https://github.com/claudiafalk0" target = _blank style = 'color:rgba(5, 117, 148, 1)'>https://github.com/claudiafalk0</a>
 </br>
 </br>
 </address>
-      
+</div>
 
-    </section>
 
+</section>
+
+</div>
+
+<footer>
+  <div>
+    Copyright &copy; 
   </div>
-
-  <footer>
-    <div>
-      Copyright &copy; 
-    </div>
   </footer>
 </body>
 
