added bubble chat

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,9 +99,9 @@
           <div class="card" id = "card-6">
             <img src="images/train.jpg" class="card-img-top" alt="Train Scheduler">
             <div id = "card-body-6" class="card-body">
-              <h5 class="card-title">Train Schedule</h5>
-              <p class="card-text">Give the train its name, destination, start time and frequency to produce the next train arrival and minutes away. This project uses firebase in order to store the users input variables, and from the user inputs it uses moment.js in order to calculate the next arrival and minutes away times</p>
-              <a href = "https://claudiafalk0.github.io/trainSchedule/" target = _blank>https://claudiafalk0.github.io/trainSchedule/</a>
+              <h5 class="card-title">Bubble Chat</h5>
+              <p class="card-text">Using Angular, Typescript, socket.io, and Auth0 this group chat allows a user to login, edit their profile page, and talk with other users in real time</p>
+              <a href = "https://chatapp-15b69.firebaseapp.com/" target = _blank>https://chatapp-15b69.firebaseapp.com/</a>
             </div>
           </div>
         </div>
