--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
             </div>
           </div>
           <div class="card" id = "card-6">
-            <img src="images/train.jpg" class="card-img-top" alt="Train Scheduler">
+            <img src="images/logo_transparent (1).png" class="card-img-top" alt="Train Scheduler">
             <div id = "card-body-6" class="card-body">
               <h5 class="card-title">Bubble Chat</h5>
               <p class="card-text">Using Angular, Typescript, socket.io, and Auth0 this group chat allows a user to login, edit their profile page, and talk with other users in real time</p>
